@@ -93,6 +93,10 @@ the XML file exported prior to V3.26 to allow it to be successfully imported in 
 <table>
 <tbody>
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3435869);return false;">3430196</a></td>
+<td>'-g config_file' option now accepts a non-existing file, creating it after notfying the user.</td>
+</tr>
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3430196);return false;">3430196</a></td>
 <td>Buttons in the Options property pages now retain the user's Windows theme.</td>
 </tr>
